# luminate-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: datasource.h  draw.h  filter.h  texture.h  utility.h  widget.h  window.h
shaders/: SimpleFragmentShader.glsl  SimpleVertexShader.glsl
src/: datasource.cpp  datasource.h  draw.cpp  draw.h  filter.cpp  filter.h  main.cpp  texture.cpp  texture.h  utility.cpp  utility.h  widget.cpp  widget.h  window.cpp  window.h
test/: CMakeLists.txt  test.cpp
